--- a/prof.hw.gb/store/templates/layouts/main.tmpl
+++ b/prof.hw.gb/store/templates/layouts/main.tmpl
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-<?=$menu?><br>
-<?=$content?>
+{{ menu|raw }}<br>
+{{ content|raw }}
 </body>
 </html>
